Prevent overflow on drawer

--- a/aikau/src/main/resources/aikau/layout/css/Alfresco.css
+++ b/aikau/src/main/resources/aikau/layout/css/Alfresco.css
@@ -6,6 +6,7 @@
 
    .mdl-layout__drawer {
       box-shadow: none;
+      overflow-x: hidden;
    }
 
    .aikau-layout_Alfresco__toolbar {
